--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta charset="utf-8" />
 <link rel="amphtml" href="https://welcome7up.com/7upbet/gogamedaymedia/">
 <title>7UPBET : SITUS LINK ALTERNATIF RESMI SLOT GAMPANG JP INDONESIA &mdash; 7UPBET : SITUS LINK ALTERNATIF RESMI SLOT GAMPANG JP INDONESIA</title>
-
+<meta name="google-site-verification" content="PZoq7raFnmBzfulFlvLK6axA6vpTIAOeGrTiy4ev8fw" />
 <meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" /><link rel="icon" type="image/x-icon" href="https://s10.gifyu.com/images/SfOMn.png"/>
 <link rel="canonical" href="https://gogamedaymedia.com/"/>
 <meta property="og:site_name" content="7UPBET : SITUS LINK ALTERNATIF RESMI SLOT GAMPANG JP INDONESIA"/>
